--- a/style.css
+++ b/style.css
@@ -2,6 +2,19 @@ body{
     font-family: 'Poppins', sans-serif;
     margin: 0%;
 }
+.topnav{
+    background-color: tomato;
+    overflow: hidden;
+    width: 100%;
+}
+.topnav a{
+    float: right;
+    color: aliceblue;
+    text-align: center;
+    padding: 10px 16px;
+    text-decoration: none;
+    font-size: 28px;
+}
 h1{
     font-size: 50px;
 }
@@ -46,6 +59,62 @@ p{
     background-image: linear-gradient(rgb(10, 184, 228),blue);
     border-radius: 2px;
     padding: 20px 60px;
-    color: white;
-    
+    color: white;   
+}
+.food{
+    text-align: center;
+    font-size: 65px;
+}
+#food-para{
+    font-size: 25px;
+}
+.food-item{
+    box-shadow: 10px 10px 25px grey;
+    width: 33%;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding-left: 12px;
+    margin-bottom: 5%;
+    border-radius: 25px;
+}
+.food-item img{
+  border-radius: 20px;
+width: 85%;
+margin: 5%;
+}
+#subscriber{
+    width: 95%;
+    margin: 10%;
+}
+.subscribe-div{
+    display: flex;
+}
+.sub-div{
+    width: 30%;
+    margin-left: 5%;
+    padding-left: 5%;
+}
+.sub-div h2{
+    font-weight: 700;
+    font-size: 35px;
+    margin-bottom: 0%;
+    padding-bottom: 0%;
+}
+.subscribe-div{
+    box-shadow: 10px 10px 40px grey;
+    margin-left: 5%;
+    border-radius: 10px;
+    width: 80%;
+}
+#footer{
+    background-color: black;
+    margin: 0%;
+    padding: 0%;
+}
+.textarea{
+text-align: center;
+color: white;
+}
+#namecolor{
+    color: indianred;
 }
