--- a/style.css
+++ b/style.css
@@ -1,11 +1,13 @@
 body{
     font-family: 'Poppins', sans-serif;
     margin: 0%;
+    overflow:auto;
 }
 .topnav{
     background-color: tomato;
     overflow: hidden;
     width: 100%;
+    margin: 0%;
 }
 .topnav a{
     float: right;
@@ -34,7 +36,7 @@ h1{
 }
 .link-button{
     text-decoration: none;
-    background-image: linear-gradient( red, orange);
+    background-image: linear-gradient( red, rgb(235, 181, 82));
     border-radius: 2px;
     color: white;
     padding: 20px 60px;
@@ -56,7 +58,7 @@ p{
 }
 .facebook{
     text-decoration: none;
-    background-image: linear-gradient(rgb(10, 184, 228),blue);
+    background-image: linear-gradient(rgb(6, 228, 36),blue);
     border-radius: 2px;
     padding: 20px 60px;
     color: white;   
